# heawm

./: .gitignore  LICENSE-MIT  Makefile  README  README.pod  atoms.gen  config.h.in  editor.c  editor.h  gen  genatoms  heawm.1.in  heawm.c  heawm.lua  heawmctl  manpage.gen  meson.build  net_atoms.gen  rc  run  strict.lua  win_hash.c  win_hash.h
docs/: README.adoc  heawm.1.in  manpage.gen
heawm/: atom-registry.lua  bindings.lua  cursor-registry.lua  ffi.lua  init.lua  json-rpc.lua  layout.lua  rect.lua  sha.lua  utf8.lua  utils.lua  virtual-input.lua
